# test_project_cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linux_testing.yml  windows_testing.yml
build_profiles/clang/: clang_windows_x64.cmake
config_modules_cmake/: config.cmake
docker/linux/: Dockerfile  build-unix.sh
input_txt_output_to_console/: CMakeLists.txt  Pushkin.txt  Pushkin_test(en).txt  Pushkin_test(ru).txt  input_txt_output_to_console.cpp  input_txt_output_to_console.sln
input_txt_output_to_console/input_txt_output_to_console/: errors.cpp  errors.h  input_txt_output_to_console.cpp  input_txt_output_to_console.vcxproj  input_txt_output_to_console.vcxproj.filters  language.cpp  language.h  system_notifications.cpp  system_notifications.h
input_txt_output_to_console/input_txt_output_to_console_lib/: application_errors.h  application_notifications.cpp  application_notifications.h  input_txt_output_to_console_lib.vcxproj  input_txt_output_to_console_lib.vcxproj.filters  language.cpp  open_and_output_text.cpp  open_and_output_text.h
input_txt_output_to_console/input_txt_output_to_console_lib_test/: input_txt_output_to_console_test.vcxproj  input_txt_output_to_console_test.vcxproj.filters  language_test.cpp  open_and_output_text_test.cpp
input_txt_output_to_console/input_txt_output_to_console_test/: input_txt_output_to_console_test.vcxproj
input_txt_output_to_console/input_txt_output_to_console_ui/: input_txt_output_to_console.cpp  input_txt_output_to_console.vcxproj  input_txt_output_to_console.vcxproj.filters  program_notifications.h
input_txt_output_to_console/input_txt_output_to_console_ui_test/: input_txt_output_to_console_ui_test.vcxproj  input_txt_output_to_console_ui_test.vcxproj.filters
input_txt_output_to_console_lib/: CMakeLists.txt  open_and_output_text.cpp  open_and_output_text.h
input_txt_output_to_console_lib_test/: CMakeLists.txt  open_and_output_text_test.cpp
input_txt_output_to_console_ui/: CMakeLists.txt  language.cpp  language.h  program_notifications.cpp  program_notifications.h  std_out.h
input_txt_output_to_console_ui/linux/: std_out.cpp
input_txt_output_to_console_ui/windows/: std_out.cpp
input_txt_output_to_console_ui_test/: CMakeLists.txt  language_test.cpp  program_notifications_test.cpp
main/: CMakeLists.txt
main/src/: main.cpp
output_test_txt_files/: test_en.txt
readers/: CMakeLists.txt
readers/include/readers/: data.h  factory.h  json.h  txt.h
readers/src/: data.cpp  factory.cpp  json.cpp  txt.cpp
readers/tests/: factory_test.cpp  json_test.cpp  txt_test.cpp
readers/tests/linux/: txt_test.cpp
readers/tests/windows/: txt_test.cpp
test_resources/: CMakeLists.txt
test_resources/test_files/: test.json
tests_data/: test_ru.txt
ui/: CMakeLists.txt
ui/include/ui/: cmd_parsers.h  input.h  language.h  notification_factory.h  notifications.h  notifications_en.h  notifications_rus.h  options.h  std_out.h  text.h
ui/src/: cmd_parsers.cpp  input.cpp  language.cpp  notification_factory.cpp  notifications.cpp  notifications_en.cpp  notifications_rus.cpp  options.cpp  text.cpp
ui/src/linux/: std_out.cpp
ui/src/windows/: std_out.cpp
ui/tests/: language_test.cpp  notification_factory_test.cpp  notifications_en_test.cpp  notifications_rus_test.cpp  notifications_test.cpp  options_test.cpp  program_notifications_test.cpp  text_test.cpp
ui/tests/include/ui_test/: options_helper.h
ui/tests/src/: notification_factory_test.cpp  options_helper.cpp  options_test.cpp  text_test.cpp
unicode_helper/: CMakeLists.txt
unicode_helper/include/unicode_helper/: multibyte_to_wchar.h
unicode_helper/src/: multibyte_to_wchar.cpp
unicode_helper/tests/: multibyte_to_wchar_test.cpp
winapi/: CMakeLists.txt
winapi/include/winapi/: application.h  button_browse.h  combo_box.h  control.h  control_box.h  control_builder.h  list_box.h  main_window.h  messages.h  static_box.h  static_control.h  static_text.h
winapi/src/: application.cpp  button_browse.cpp  combo_box.cpp  control.cpp  list_box.cpp  main.cpp  main_window.cpp  static_box.cpp  static_text.cpp
